# dev-bootcamp-factory-workshop

./: README.md
day-1-am/: README.md
day-1-am/00-pirate-claude-md/: README.md
day-1-am/00-pirate-claude-md/exercise/: CLAUDE.md
day-1-am/00-pirate-claude-md/solution/: CLAUDE.md
day-1-am/01-pirate-skill/: README.md
day-1-am/02-rules/: README.md
day-1-am/03-subagent/: README.md
day-1-am/04-planning-skill/: README.md
day-1-pm/: README.md
day-1-pm/01-factory-contract/: README.md
day-1-pm/02-planner-to-bean/: README.md
day-1-pm/03-refine-bean/: README.md
day-2-am/: README.md
sandbox/: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
sandbox/.beans/: sandbox-1e0y--team-takeaway-1-pager-workshop-reference-doc.md  sandbox-exercise-olqc--klammer-support.md  sandbox-v4n6--preflight-gate-block-implement-if-eval-harness-fai.md  sandbox-vsb7--ascii-bar-chart-and-sparkline-renderer-go.md  sandbox-vzwt--kommazahlen-support-im-calculator.md
sandbox/.claude/: settings.json
sandbox/.claude/hooks/: tool-outcome.sh  trace-run.sh
sandbox/.claude/skills/implement/: SKILL.md
sandbox/docs/: TAKEAWAY.md
sandbox/docs/superpowers/specs/: 2026-06-17-ac-judge-design.md
sandbox/eval-kit/: check.sh
sandbox/eval-kit/judges/: ac-specific-prompt.md  ac-specific.sh
sandbox/runs/: reflect.sh  tool-outcomes.jsonl  trace.jsonl
sandbox/src/: evaluator.cpp  evaluator.h  evaluator.ts  format.ts  lexer.cpp  lexer.h  lexer.ts  main.cpp  main.ts  parser.cpp  parser.h
sandbox/tests/: calc.test.ts  evaluator.test.ts  evaluator_test.cpp  format.test.ts  lexer.test.ts  lexer_test.cpp  parser_test.cpp
supplied/: README.md
(+13 files in other folders)
